--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -16,26 +16,8 @@
 </html>
 
 <script>
-	const api_url = 'http://localhost:8000/api/todos' //'https://api.wheretheiss.at/v1/satellites/25544'
-	async function getISS(){
-		const response = await fetch(api_url);
-		const data = await response.json();
-		console.log(data);
-	}
-	getISS();
-	function add(){
-		const list = document.getElementById('list');
-		for(let i=1; i<4; i++){
-			const value = document.createElement('li');
-			value.innerHTML = 'item';
-			list.appendChild(value);
-		}
-	}
-
 	async function retrieve(){
-		//const axios = require('axios');
-		//const response = await fetch('https://www.buda.com/api/v2/markets/eth-btc/ticker')
-		const response = await fetch('https://to-do-back-end.herokuapp.com/api/todos/') //'https://to-do-back-end.herokuapp.com/api/todos') //'https://api.wheretheiss.at/v1/satellites/25544')
+		const response = await fetch('https://to-do-back-end.herokuapp.com/api/todos/') 
 		const data = await response.json();
 		const list = document.getElementById('list');
 		for (let todo in data){
@@ -45,10 +27,5 @@
 				list.appendChild(li);
 			}
 		}
-		//axios.get('https://www.buda.com/api/v2/markets/eth-btc/ticker')
-		//.then(function(response) {
-		//	console.log(response);
-		//});
-		//fetch('https://www.buda.com/api/v2/markets/eth-btc/ticker')
 	}
 </script>
